@@ -1,6 +1,6 @@
 Package: Matrix
-Version: 0.3-17
-Date: 2002/04/30
+Version: 0.3-18
+Date: 2002/05/03
 Title: A Matrix package for R
 Author: Douglas Bates <bates@stat.wisc.edu>
 	Saikat DebRoy <saikat@stat.wisc.edu>
