@@ -16,16 +16,6 @@ class LaEigenDouble;
 extern "C" {
 #include <R.h>
 #include <Rinternals.h>
-#if R_VERSION < R_Version(1, 2, 0)
-//#define STRING_ELT(x,i)		((x)->u.vecsxp.type.s)[i]
-#define STRING_ELT(x,i)		(STRING(x)[i])
-//#define VECTOR_ELT(x,i)		((x)->u.vecsxp.type.s)[i]
-#define VECTOR_ELT(x,i)         (VECTOR(x)[i])
-//#define SET_STRING_ELT(x,i,v)	(((x)->u.vecsxp.type.s)[i]=(v))
-#define SET_STRING_ELT(x,i,v)	(STRING(x)[i] = (v))
-//#define SET_VECTOR_ELT(x,i,v)	(((x)->u.vecsxp.type.s)[i]=(v))
-#define SET_VECTOR_ELT(x,i,v)	(VECTOR(x)[i] = (v))
-#endif
 }
 
 #include <iostream.h>
